<resources>
    <string name="app_name">A2-WITView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_header_desc">Navigation header</string>
    <string name="action_Logout">Log Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_news">News</string>


    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="nav_header_title">Crw Development - WITView</string>
    <string name="menu_timetables">TimeTables</string>
    <string name="menu_timetable_search">Search Timetables</string>
    <string name="menu_News">Latest WIT News</string>
    <string name="menu_timetablelist">Timetables</string>


    <string name="timetableTitle">TimeTable</string>
    <string name="timetable_add_title">Timetable</string>
    <string name="timetable_hint_title">Enter a Timetable Name</string>
    <string name="timetable_add_subject">Subject</string>
    <string name="timetable_hint_subject">Enter a Subject</string>
    <string name="timetable_add_Lecturer">Lecturer</string>
    <string name="timetable_hint_Lecturer">Enter a Lecturer Name</string>
    <string name="timetable_add_Room">Room</string>
    <string name="timetable_hint_Room">Enter a Room Name</string>
    <string name="timetable_button_create">Create</string>

    <string name="map_IT">IT</string>
    <string name="map_TL">TL</string>
    <string name="map_FTG">FTG</string>
    <string name="map_Refresh">Refresh</string>

    <string name="Text_Email">Email:</string>
    <string name="Text_Password">Password:</string>
    <string name="Text_Repeat_Password">Repeat Password:</string>
    <string name="signIn_Button">Sign In</string>
    <string name="signUp_Button">Sign Up</string>
    <string name="signUp_Here_Button">Don\'t have an account?</string>
    <string name="signIn_Here_Button">Have an account?</string>

</resources>
