<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/menu_News" />
    </group>


    <item android:title="TimeTables">
        <menu>

            <!--Put can view for new timetables (some sort of recycler view)-->

            <item
                android:id="@+id/app_bar_search"
                app:actionViewClass="android.widget.SearchView" />
        </menu>
    </item>

</menu>
