<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/timetableTitle"
                android:layout_width="188dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/timetableTitle"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <!--
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal">

                  <TextView
                      android:id="@+id/Display_Time"
                      android:layout_width="170dp"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="20dp"
                      android:layout_marginStart="10dp"
                      android:text="TextView" />

                  <Spinner
                      android:id="@+id/timetable_spinner_times"
                      android:layout_width="150dp"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="40dp"
                      android:layout_marginTop="20dp" />
              </LinearLayout>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal">

                  <TextView
                      android:id="@+id/Display_Day"
                      android:layout_width="170dp"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="20dp"
                      android:layout_marginStart="10dp"
                      android:text="TextView" />

                  <Spinner
                      android:id="@+id/timetable_spinner_days"
                      android:layout_width="150dp"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="40dp"
                      android:layout_marginTop="20dp" />
              </LinearLayout>

            -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/timetable_add_title"
                        app:layout_constraintBottom_toTopOf="@+id/Title_Input"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.046"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0" />

                    <EditText
                        android:id="@+id/Title_Input"
                        android:layout_width="229dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="24dp"
                        android:ems="10"
                        android:hint="@string/timetable_hint_title"
                        android:inputType="textPersonName"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/timetable_create"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/timetable_button_create"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.652"
                        app:layout_constraintStart_toEndOf="@+id/Title_Input"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.666" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--

                <TextView
                    android:id="@+id/Subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/timetable_add_subject" />

                <EditText
                    android:id="@+id/Subject_Input"
                    android:layout_width="229dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="144dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/timetable_hint_subject"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/Lecturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/timetable_add_Lecturer" />

                <EditText
                    android:id="@+id/Lecturer_Input"
                    android:layout_width="229dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="144dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/timetable_hint_Lecturer"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/Room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/timetable_add_Room" />

                <EditText
                    android:id="@+id/Room_Input"
                    android:layout_width="229dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="144dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/timetable_hint_Room"
                    android:inputType="textPersonName" />

                -->

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>